# spsd

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  instances.csv
src/: main.rs
src/cli/: arg_parsing.rs  io.rs  mod.rs  value_parsers.rs
src/cmd/: destroy.rs  list.rs  mod.rs  modify.rs  new.rs  start.rs  stop.rs
src/commands/: destroy.rs  list.rs  mod.rs  modify.rs  new.rs  profile.rs  ss.rs  start.rs  stop.rs
src/lib/: constants.rs  instances.rs  types.rs
src/utils/: config.rs  constants.rs  instances.rs  json_handling.rs  machines.rs  mod.rs  request_utils.rs  types.rs
