[package]
name = "spsd"
version = "0.1.1"
description = "state persistent serverless devboxes"
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
reqwest = "0.11" 
colored = "2.0"
prettytable-rs = "0.10.0"
